--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: setup
       run: |
-       sh ./setup.sh
+       sudo sh ./setup.sh
     - name: Libtool
       run: |
         autoreconf -i
